initial site files

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div id="top" class="clearfix">
         <section id="name">Michael Dickmann</section>
 
-        <aside>About | Portfolio | Contact</aside>
+        <aside><a href="index.html">About </a>| <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></aside>
     </div>
 
     <section id="backdrop">
