--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <div id="top" class="clearfix">
         <section id="name">Michael Dickmann</section>
 
-        <aside>About | Portfolio | Contact</aside>
+        <aside><a href="index.html">About </a>| <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></aside>
     </div>
 
     <section id="backdrop">
@@ -25,16 +25,21 @@
                     <img id="pic" src="assets/images/Castlevania_nes.png" style="width:130px;height:135px" alt="my image">
                     <div id="castlevania">Action Adventure</div>
                     <img id="blurb" src="assets/images/ZELDA.png" style="width:130px;height:135px" alt="my image">
+                    <div id="zelda">Quest Games</div>
                     </section>
 
                     <section id="image" class="clearfix">
                             <img id="pic" src="assets/images/doom.jpg" style="width:130px;height:135px" alt="my image">
+                            <div id="doom">Shooter Games</div>
                             <img id="blurb" src="assets/images/ships_of_arcadia.jpg" style="width:130px;height:135px" alt="my image">
+                            <div id="skies">Pirate Games</div>
                     </section>
 
                     <section id="image" class="clearfix">
                             <img id="pic" src="assets/images/Wing Commander.png" style="width:130px;height:135px" alt="my image">
+                            <div id="wc">Space Games</div>
                             <img id="blurb" src="assets/images/wizardry.jfif" style="width:130px;height:135px" alt="my image">
+                            <div id="wizardry">Turn Based Games</div>
                             </section>
         
                     
