--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
     
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Portfolio</title>
 
@@ -11,7 +12,7 @@
 
 <body>
     <div id="top" class="clearfix">
-        <section id="name">Michael Dickmann</section>
+        <header id="name">Michael Dickmann</header>
 
         <aside><a href="index.html">About </a>| <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a></aside>
     </div>
