--- a/portfolio.html
+++ b/portfolio.html
@@ -68,3 +68,135 @@
 
 
 </html>
+
+<!-- <!DOCTYPE html>
+
+<html>
+
+<head>
+
+<style>
+
+#con
+{
+
+border:1px solid grey;
+height:500px;
+
+border-radius:5px;
+margin:auto;
+
+}
+
+.box
+{
+
+display:inline-block;
+background:lightgrey;
+width:8%;
+height:100%;
+position:absolute;
+}
+
+.box:nth-child(1)
+{
+background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+Transform:skew(30deg,0deg);
+}
+
+.box:nth-child(2)
+{
+background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+Transform:skew(25deg,0deg);
+}
+
+.box:nth-child(3)
+{
+background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+Transform:skew(20deg,0deg);
+}
+
+.box:nth-child(4)
+{
+background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+Transform:skew(15deg,0deg);
+}
+
+.box:nth-child(5)
+{
+background-image: linear-gradient(120deg, #f093fb 0%, #f5576c 100%);
+Transform:skew(5deg,0deg);
+}
+
+.box:nth-child(6)
+{
+background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+Transform:skew(-3deg,0deg);
+}
+
+.box:nth-child(7)
+{
+background-image: linear-gradient(to top, #5ee7df 0%, #b490ca 100%);
+Transform:skew(-10deg,0deg);
+}
+
+.box:nth-child(8 )
+{
+background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, 
+
+#fe9a8b 100%);
+Transform:skew(-15deg,0deg);
+}
+
+.box:nth-child(9)
+{
+background-image: linear-gradient(-225deg, #3D4E81 0%, #5753C9 48%, #6E7FF3 
+
+100%);
+Transform:skew(-20deg,0deg);
+}
+
+.box:nth-child(10)
+{
+background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, 
+
+#FFF800 100%);
+Transform:skew(-25deg,0deg);
+}
+
+.box:nth-child(11)
+{
+
+background-image: linear-gradient(-225deg, #69EACB 0%, #EACCF8 48%, #6654F1 
+
+100%);
+Transform:skew(-30deg,0deg);
+}
+
+</style>
+
+</head>
+
+<body>
+
+<div id='con'>
+
+
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+<div class='box'></div>
+
+</div>
+
+
+</body>
+
+</html> -->
